@@ -192,7 +192,7 @@ static const OPTION optionsTable[] = {
   {0,   OPTION_WERROR, NULL, "Treat the warnings as errors"},
   {0,   OPTION_DEBUG, NULL, "Enable debugging symbol output"},
   {0,   "--cyclomatic", &options.cyclomatic, "Display complexity of compiled functions"},
-  {0,   OPTION_STD, NULL, "Determine the language standard (c90, c99, c11, c23, sdcc89 etc.)"},
+  {0,   OPTION_STD, NULL, "Determine the language standard (c90, c99, c11, c23, c2y, sdcc89 etc.)"},
   {0,   OPTION_DOLLARS_IN_IDENT, &options.dollars_in_ident, "Permit '$' as an identifier character"},
   {0,   OPTION_SIGNED_CHAR, &options.signed_char, "Make \"char\" signed by default"},
   {0,   OPTION_USE_NON_FREE, &options.use_non_free, "Search / include non-free licensed libraries and header files"},
@@ -653,6 +653,7 @@ setDefaultOptions (void)
   options.std_c99 = 1;
   options.std_c11 = 1;          /* default to C11 (we want inline by default, so we need at least C99, and support for C11 is more complete than C99) */
   options.std_c23 = 0;
+  options.std_c2y = 0;
   options.code_seg = CODE_NAME ? Safe_strdup (CODE_NAME) : NULL;        /* default to CSEG for generated code */
   options.const_seg = CONST_NAME ? Safe_strdup (CONST_NAME) : NULL;     /* default to CONST for generated code */
   options.data_seg = DATA_NAME ? Safe_strdup (DATA_NAME) : NULL;        /* default to DATA for non-initialized data */
@@ -1267,6 +1268,7 @@ parseCmdLine (int argc, char **argv)
                   options.std_c99 = 0;
                   options.std_c11 = 0;
                   options.std_c23 = 0;
+                  options.std_c2y = 0;
                   options.std_sdcc = 0;
                   continue;
                 }
@@ -1277,6 +1279,7 @@ parseCmdLine (int argc, char **argv)
                   options.std_c99 = 0;
                   options.std_c11 = 0;
                   options.std_c23 = 0;
+                  options.std_c2y = 0;
                   options.std_sdcc = 0;
                   continue;
                 }
@@ -1287,6 +1290,7 @@ parseCmdLine (int argc, char **argv)
                   options.std_c99 = 1;
                   options.std_c11 = 0;
                   options.std_c23 = 0;
+                  options.std_c2y = 0;
                   options.std_sdcc = 0;
                   continue;
                 }
@@ -1298,6 +1302,7 @@ parseCmdLine (int argc, char **argv)
                   options.std_c99 = 1;
                   options.std_c11 = 1;
                   options.std_c23 = 0;
+                  options.std_c2y = 0;
                   options.std_sdcc = 0;
                   continue;
                 }
@@ -1308,6 +1313,18 @@ parseCmdLine (int argc, char **argv)
                   options.std_c99 = 1;
                   options.std_c11 = 1;
                   options.std_c23 = 1;
+                  options.std_c2y = 0;
+                  options.std_sdcc = 0;
+                  continue;
+                }
+
+              if (strcmp (langVer, "c2y") == 0)
+                {
+                  options.std_c95 = 1;
+                  options.std_c99 = 1;
+                  options.std_c11 = 1;
+                  options.std_c23 = 1;
+                  options.std_c2y = 1;
                   options.std_sdcc = 0;
                   continue;
                 }
@@ -1318,6 +1335,7 @@ parseCmdLine (int argc, char **argv)
                   options.std_c99 = 0;
                   options.std_c11 = 0;
                   options.std_c23 = 0;
+                  options.std_c2y = 0;
                   options.std_sdcc = 1;
                   continue;
                 }
@@ -1328,6 +1346,7 @@ parseCmdLine (int argc, char **argv)
                   options.std_c99 = 1;
                   options.std_c11 = 0;
                   options.std_c23 = 0;
+                  options.std_c2y = 0;
                   options.std_sdcc = 1;
                   continue;
                 }
@@ -1338,6 +1357,7 @@ parseCmdLine (int argc, char **argv)
                   options.std_c99 = 1;
                   options.std_c11 = 1;
                   options.std_c23 = 0;
+                  options.std_c2y = 0;
                   options.std_sdcc = 1;
                   continue;
                 }
@@ -1348,6 +1368,18 @@ parseCmdLine (int argc, char **argv)
                   options.std_c99 = 1;
                   options.std_c11 = 1;
                   options.std_c23 = 1;
+                  options.std_c2y = 0;
+                  options.std_sdcc = 1;
+                  continue;
+                }
+
+              if (strcmp (langVer, "sdcc2y") == 0)
+                {
+                  options.std_c95 = 1;
+                  options.std_c99 = 1;
+                  options.std_c11 = 1;
+                  options.std_c23 = 1;
+                  options.std_c2y = 1;
                   options.std_sdcc = 1;
                   continue;
                 }
