@@ -1,3 +1,11 @@
+2024-10-27 Benedikt Freisen <b.freisen AT gmx.net>
+
+	* doc/sdccman.lyx,
+	  src/SDCC.lex,
+	  src/SDCCglobl.h,
+	  src/SDCCmain.c:
+	  Add C2y mode in preparation for the first C2y features.
+
 2024-10-27 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* src/stm8/gen.c:
